# logsentry

./: README.md  dev_notes.md  generated_logs.txt  incident_report.md  main.py  pyproject.toml
alerters/: __init__.py  console.py  ticket.py
analytics/: __init__.py
collector/: __init__.py  file_tail.py  syslog.py
dashboard/: __init__.py
detection/: detection_checks.py
output/: advanced.py  formatter.py
parsers/: auth_parser.py  cloudtrail_parser.py  ssh_parser.py  syslog_parser.py
rules/: __init__.py
samples/: case_brute_force.csv  case_exfiltration.csv  case_lateral_movement.csv  case_mitm.csv  case_port_scan.csv  case_privilege_escalation.csv
siem/: __init__.py
threat_intel/: __init__.py  providers.py
